# naive_fortunes-archive

./: Cargo.toml  benchmark.py  bootstrap.sh
src/: main.rs
