[package]
name = "naivefortunes"
description = "A naive fortune http API server"
version = "0.1.1"
authors = ["duangsuse <fedora-opensuse@outlook.com>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = { version = "0.3.2", features = ["tls"] }
rocket_codegen = "*"
rand = "*"
lazy_static = "0.2.9"
